[gd_scene load_steps=12 format=3 uid="uid://be7dtiycyqqdo"]

[ext_resource type="Texture2D" uid="uid://bfqic6q4e240k" path="res://16x16_Jerom_CC-BY-SA-3.0.png" id="1_1hku1"]
[ext_resource type="Script" uid="uid://c0cdn6td86nki" path="res://player.gd" id="1_kg056"]
[ext_resource type="PackedScene" uid="uid://cspwypj5gcqgp" path="res://waveProjectile.tscn" id="2_uyxcu"]
[ext_resource type="PackedScene" uid="uid://cbovt48tp2mgj" path="res://dash.tscn" id="3_03yf5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5b2hy"]
atlas = ExtResource("1_1hku1")
region = Rect2(96, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76j3p"]
atlas = ExtResource("1_1hku1")
region = Rect2(80, 304, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vt12k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b2hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76j3p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dia7b"]
size = Vector2(22, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7pmb"]
size = Vector2(24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ep1u"]
atlas = ExtResource("1_1hku1")
region = Rect2(97.3055, 208.813, 14.2199, 15.2732)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_keddx"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("WeaponRotation:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("WeaponRotation:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -23)
scale = Vector2(2, 2)
script = ExtResource("1_kg056")
wave = ExtResource("2_uyxcu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5625, 1.5625)
sprite_frames = SubResource("SpriteFrames_vt12k")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dia7b")

[node name="PlayerHitBox" type="Area2D" parent="."]
modulate = Color(0.537255, 1, 0.239216, 1)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(0, -0.5)
scale = Vector2(1, 1.205)
shape = SubResource("RectangleShape2D_r7pmb")

[node name="WeaponRotation" type="Node2D" parent="."]
position = Vector2(0, -9.53674e-07)
rotation = 0.0480109

[node name="Sprite2D" type="Sprite2D" parent="WeaponRotation"]
texture_filter = 1
position = Vector2(13.2478, -0.381328)
rotation = 0.731655
texture = SubResource("AtlasTexture_8ep1u")

[node name="WaveSpawn" type="Node2D" parent="WeaponRotation"]
position = Vector2(22.7128, -1.33668)

[node name="dash" parent="." instance=ExtResource("3_03yf5")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_keddx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
